Invoice billing getapis (#1)
* Creating new API's and updating services

* Creating new API's and updating services

* changed endpoint

---------

Co-authored-by: Pragosh <pvspragosh.gmail.com>